Apartado Carrera de software

--- a/index.html
+++ b/index.html
@@ -270,10 +270,9 @@
             </svg>
             <div class="container">
               <div class="carousel-caption text-start">
-                <h1>Example headline.</h1>
+                <h1>CARRERA DE SOFTWARE</h1>
                 <p class="opacity-75">
-                  Some representative placeholder content for the first slide of
-                  the carousel.
+                  La carrera de Desarrollo de Software forma profesionales capaces de diseñar, desarrollar, probar, implementar y mantener soluciones de software para satisfacer las necesidades de usuarios y organizaciones, aplicando metodologías ágiles, herramientas digitales y principios de calidad, ética y creatividad.
                 </p>
                 <p>
                   <a class="btn btn-lg btn-primary" href="#">Sign up today</a>
