--- a/index.html
+++ b/index.html
@@ -297,10 +297,9 @@
             </svg>
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
+                <h1>CARRERA DE TECNOLOGIAS DE LA INFORMACION</h1>
                 <p>
-                  Some representative placeholder content for the second slide
-                  of the carousel.
+                  La carrera de Tecnologías de la Información forma profesionales con un espíritu emprendedor, ético e innovador que comprenden las necesidades de las organizaciones a un alto nivel de abstracción para analizar las demandas de tecnología de la información (TI) y desarrollar soluciones considerando la seguridad, la infraestructura y los riesgos..
                 </p>
                 <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
               </div>
