Apartado carrera de industrial

--- a/index.html
+++ b/index.html
@@ -322,10 +322,9 @@
             </svg>
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>One more for good measure.</h1>
+                <h1>CARRERA DE INGENIERIA INDUSTRIAL</h1>
                 <p>
-                  Some representative placeholder content for the third slide of
-                  this carousel.
+                  La carrera de Ingeniería Industrial forma profesionales altamente capacitados para diseñar, mejorar e implementar sistemas integrados de personas, materiales, información y energía, con el objetivo principal de aumentar la productividad, mejorar la calidad y reducir costos en cualquier tipo de organización..
                 </p>
                 <p>
                   <a class="btn btn-lg btn-primary" href="#">Browse gallery</a>
