Se agrega los servicios de la fisei

--- a/index.html
+++ b/index.html
@@ -375,13 +375,11 @@
                 fill="var(--bs-secondary-color)"
               ></rect>
             </svg>
-            <h2 class="fw-normal">Heading</h2>
+            <h2 class="fw-normal">ADMINISTRACION DE REDES</h2>
             <p>
-              Some representative placeholder content for the three columns of
-              text below the carousel. This is the first column.
-            </p>
+              Departamento de  gestion de laboratorio, prestamos de equipos y soporte alternativo.            </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#">Mas información &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -402,13 +400,12 @@
                 fill="var(--bs-secondary-color)"
               ></rect>
             </svg>
-            <h2 class="fw-normal">Heading</h2>
+            <h2 class="fw-normal">CTT - TALLERES</h2>
             <p>
-              Another exciting bit of representative placeholder content. This
-              time, we've moved on to the second column.
+              Departamento encargado de planificar cursos de educacion continua enfocados a tecnologia.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#">Mas información &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -429,13 +426,12 @@
                 fill="var(--bs-secondary-color)"
               ></rect>
             </svg>
-            <h2 class="fw-normal">Heading</h2>
+            <h2 class="fw-normal">BIBLIOTECA</h2>
             <p>
-              And lastly this, the third column of representative placeholder
-              content.
+              Departamento que permite el prestamo de libros y espacion de trabajo .
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="#">Mas información &raquo;</a>
             </p>
           </div>
           <!-- /.col-lg-4 -->
