Se agrego los links para mas informacuion de las carreras

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                   La carrera de Desarrollo de Software forma profesionales capaces de diseñar, desarrollar, probar, implementar y mantener soluciones de software para satisfacer las necesidades de usuarios y organizaciones, aplicando metodologías ágiles, herramientas digitales y principios de calidad, ética y creatividad.
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Sign up today</a>
+                  <a class="btn btn-lg btn-primary" href="https://fisei.uta.edu.ec/v4.0/index.php/carreras-y-programas/software">Mas información</a>
                 </p>
               </div>
             </div>
@@ -301,7 +301,7 @@
                 <p>
                   La carrera de Tecnologías de la Información forma profesionales con un espíritu emprendedor, ético e innovador que comprenden las necesidades de las organizaciones a un alto nivel de abstracción para analizar las demandas de tecnología de la información (TI) y desarrollar soluciones considerando la seguridad, la infraestructura y los riesgos..
                 </p>
-                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="https://fisei.uta.edu.ec/v4.0/index.php/carreras-y-programas/tecnologias-de-la-informacion">Mas información</a></p>
               </div>
             </div>
           </div>
@@ -327,7 +327,7 @@
                   La carrera de Ingeniería Industrial forma profesionales altamente capacitados para diseñar, mejorar e implementar sistemas integrados de personas, materiales, información y energía, con el objetivo principal de aumentar la productividad, mejorar la calidad y reducir costos en cualquier tipo de organización..
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Browse gallery</a>
+                  <a class="btn btn-lg btn-primary" href="https://fisei.uta.edu.ec/v4.0/index.php/carreras-y-programas/ingenieria-industrial">Mas información</a>
                 </p>
               </div>
             </div>
