--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </svg>
             <div class="container">
               <div class="carousel-caption">
-                <h1>CARRERA DE TECNOLOGIAS DE LA INFORMACION</h1>
+                <h1>CARRERA DE TELECOMUNICACION E INFORMATICA</h1>
                 <p>
                   La carrera de Tecnologías de la Información forma profesionales con un espíritu emprendedor, ético e innovador que comprenden las necesidades de las organizaciones a un alto nivel de abstracción para analizar las demandas de tecnología de la información (TI) y desarrollar soluciones considerando la seguridad, la infraestructura y los riesgos..
                 </p>
@@ -442,11 +442,12 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1">
-              CONVOCATORIA PARA EL PROCESO DE SELECCIÓN DE AYUDANTES DE INVESTIGACIÓN PARA LA FACULTAD DE INGENIERÍA EN SISTEMAS, ELECTRÓNICA E INDUSTRIAL.
-              <span class="text-body-secondary">FISEI</span>
+              First featurette heading.
+              <span class="text-body-secondary">It’ll blow your mind.</span>
             </h2>
             <p class="lead">
-              Esta sección desempeña un papel crucial como espacio informativo destinado a comunicar oportunidades de participación y colaboración académica en el ámbito educativo. Proporciona una descripción detallada de los procesos y requisitos para aquellos interesados ​​en postularse como ayudantes de investigación. La finalidad primordial de esta sección es anunciar de manera clara y transparente las oportunidades disponibles para estudiantes o profesionales que aspiran a desempeñar roles de asistencia en el ámbito académico, contribuyendo así al fortalecimiento de la estructura educativa mediante la colaboración de individuos comprometidos y calificados.
+              Some great placeholder content for the first featurette here.
+              Imagine some exciting prose here.
             </p>
           </div>
           <div class="col-md-5">
@@ -475,19 +476,13 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading fw-normal lh-1">
-              CLUBES DEPORTIVOS - UTA
-              <span class="text-body-secondary">FISEI</span>
+              Oh yeah, it’s that good.
+              <span class="text-body-secondary">See for yourself.</span>
             </h2>
             <p class="lead">
-              La Universidad Técnica de Ambato abre las inscripciones para sus clubes deportivos, espacios donde podrás entrenar, compartir, crecer y representar con orgullo a tu universidad.
-
-              Si te apasiona el deporte, esta es tu oportunidad. Participa en uno de nuestros clubes: fútbol, natación, baloncesto, escalada deportiva, danza y recreación, o paralímpico.
-
-              Las inscripciones estarán abiertas hasta el 28 de abril. Para unirte necesitas presentar: ficha estudiantil, certificación de estar legalmente matriculado, oficio dirigido a la Directora del CCF solicitando integrar el club, copia de la cédula y una carpeta con el color correspondiente al club.
-
-              No dejes pasar esta oportunidad de vivir nuevas experiencias, fortalecer tu bienestar y ser parte del espíritu deportivo de la UTA.
-
-              ¡No te quedes fuera! Entrena, crece y vibra con la UTA.
+              Another featurette? Of course. More placeholder content here to
+              give you an idea of how this layout would work with some actual
+              real-world content in place.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
@@ -556,7 +551,7 @@
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
-          &copy; 2017–2025 Company, Inc. &middot;
+          &copy; 2025 FISEI - UTA Edu. &middot;
           <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
         </p>
       </footer>
