Fusion Robotica y Telecomunicaciones

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </svg>
             <div class="container">
               <div class="carousel-caption">
-                <h1>CARRERA DE TELECOMUNICACION E INFORMATICA</h1>
+                <h1>CARRERA DE ROBOTICA</h1>
                 <p>
                   La carrera de Tecnologías de la Información forma profesionales con un espíritu emprendedor, ético e innovador que comprenden las necesidades de las organizaciones a un alto nivel de abstracción para analizar las demandas de tecnología de la información (TI) y desarrollar soluciones considerando la seguridad, la infraestructura y los riesgos..
                 </p>
