--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,11 @@
   </head>
   <body>
     <h1> NOSOTROS</h1>
-    <p>Aqui va la informacion de mision  y vision.</p>
+    <hr>
+    <h2>VISION</h2>
+    <p>Aqui va la vision.</p>
+    <hr>
+    <h2>MISIÓN</h2>
+    <p>Aqui va la informacion de mision</p>
   </body>
 </html>
