Cambios en index.html

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 aria-label="Search"
               />
               <button class="btn btn-outline-success" type="submit">
-                Search
+               Buscar
               </button>
             </form>
           </div>
